# scrapy-midas

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/: scrapy.cfg
src/midas/: extensions.py  items.py  middlewares.py  monitors.py  pipelines.py  serializators.py  serializers.py  settings.py  validators.py
src/midas/spiders/: habrcareer.py  headhunter.py
